# tpdb

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING_NEW.md  LICENSE  README.md  duplicates.py  pyproject.toml  requirements.txt  tpdb.py
.github/: copilot-instructions.md
assets/: demo.cast  login.cast
scripts/: README.md  analyze_naming.py  apply_snake_case.py
src/tpdb/: __init__.py  cli.py  dupes.py  main.py  matcher.py
src/tpdb/auth/: __init__.py  config.py  plex_auth.py  validators.py
src/tpdb/ui/: __init__.py  prompts.py
tests/: test_auth_config.py  test_auth_plex_auth.py  test_auth_validators.py  test_main.py  test_matcher.py  test_ui_prompts.py
