[project]
name = "tpdb"
version = "0.1.0"
description = "Plex Poster Organizer is a powerful Python utility designed to streamline the management of movie and TV show posters for your Plex media server. It helps you download, organize, and sync posters from The Poster DB (TPDb), preparing them for use with metadata managers like [Kometa](https://kometa.wiki/) (formerly Plex Meta Manager) or for direct use within your media library."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []
